[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Screens/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/font,themes/fonts/PixelRPG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/slider/2.verze.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/slider/images/shields_2.png" type="Texture" id=4]
[ext_resource path="res://assets/new/effects_sounds/player/switch1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/forward.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_space = -8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 250, 75 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_master:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_music:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_Sfx:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/GridContainer2/Label_back:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "selected_back"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer2/Label_back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 580, 505 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "selected_master"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_master:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 370, 232 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "selected_music"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_music:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 370, 307 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "selected_sfx"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer2/GridContainer/Label_Sfx:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 370, 382 ) ]
}

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 197.0
margin_right = 893.0
margin_bottom = 523.0
custom_constants/vseparation = 70

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer2"]
margin_right = 506.0
margin_bottom = 225.0
custom_constants/vseparation = 0
columns = 2

[node name="Label_master" type="Label" parent="CenterContainer/GridContainer2/GridContainer"]
margin_top = 22.0
margin_right = 252.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Master audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_master" type="HSlider" parent="CenterContainer/GridContainer2/GridContainer"]
margin_left = 256.0
margin_right = 506.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
min_value = -80.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_music" type="Label" parent="CenterContainer/GridContainer2/GridContainer"]
margin_top = 97.0
margin_right = 252.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2_Music" type="HSlider" parent="CenterContainer/GridContainer2/GridContainer"]
margin_left = 256.0
margin_top = 75.0
margin_right = 506.0
margin_bottom = 150.0
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
min_value = -80.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Sfx" type="Label" parent="CenterContainer/GridContainer2/GridContainer"]
margin_top = 172.0
margin_right = 252.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 1 )
text = "Sound effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider3_sfx" type="HSlider" parent="CenterContainer/GridContainer2/GridContainer"]
margin_left = 256.0
margin_top = 150.0
margin_right = 506.0
margin_bottom = 225.0
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 10 )
min_value = -80.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_back" type="Label" parent="CenterContainer/GridContainer2"]
margin_top = 295.0
margin_right = 506.0
margin_bottom = 326.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/selected_back = SubResource( 12 )
anims/selected_master = SubResource( 13 )
anims/selected_music = SubResource( 14 )
anims/selected_sfx = SubResource( 15 )

[node name="Right" type="Sprite" parent="."]
position = Vector2( 370, 382 )
texture = ExtResource( 6 )

[connection signal="mouse_entered" from="CenterContainer/GridContainer2/GridContainer/HSlider_master" to="." method="_on_HSlider_master_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/GridContainer2/GridContainer/HSlider_master" to="." method="_on_HSlider_master_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/GridContainer2/GridContainer/HSlider2_Music" to="." method="_on_HSlider2_Music_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/GridContainer2/GridContainer/HSlider2_Music" to="." method="_on_HSlider2_Music_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/GridContainer2/GridContainer/HSlider3_sfx" to="." method="_on_HSlider3_sfx_mouse_entered"]
[connection signal="value_changed" from="CenterContainer/GridContainer2/GridContainer/HSlider3_sfx" to="." method="_on_HSlider3_sfx_value_changed"]
[connection signal="gui_input" from="CenterContainer/GridContainer2/Label_back" to="." method="_on_Label_back_gui_input"]
